# hamster_simulation

./: .gitignore  README.md
gazebo_ackermann_drive_plugin/: CMakeLists.txt  package.xml
gazebo_ackermann_drive_plugin/include/: AckermannDrivePlugin.h
gazebo_ackermann_drive_plugin/src/: AckermannDrivePlugin.cpp
hamster_teleop/: CMakeLists.txt  package.xml
hamster_teleop/scripts/: keyboard.py
hamster_teleop/src/: joystick_teleop_node.cpp
hamster_vehicle/: CMakeLists.txt  package.xml
hamster_vehicle_description/: CMakeLists.txt
hamster_vehicle_description/launch/: hamster_agent.launch
hamster_vehicle_description/meshes/: A2_lidar.dae  camera.dae  shell.dae
hamster_vehicle_description/urdf/: front_wheel.urdf.xacro  hamster.urdf.xacro  rear_wheel.urdf.xacro  wheel.urdf.xacro
hamster_vehicle_gazebo/: CMakeLists.txt  package.xml
hamster_vehicle_gazebo/config/: hamster_joint_ctrlr_params.yaml
hamster_vehicle_gazebo/launch/: hamster_V6_spawner.launch  hamster_V7_spawner.launch  hamster_multi_vehicle.launch  hamster_vehicle.launch  hamster_vehicle_spawner.launch  hamster_world.launch  joystick.launch  keyboard.launch
hupster_wandering/: CMakeLists.txt  package.xml
hupster_wandering/include/hupster_wandering/: Wandering.h
hupster_wandering/include/hupster_wandering/costmap/: CostMap.h
hupster_wandering/include/hupster_wandering/costmap/datasource/: ICostMapDataSource.h  LaserScanDataSource.h
hupster_wandering/include/hupster_wandering/costmap/parameters/: IParametersProvider.h  RosParametersProvider.h
hupster_wandering/include/hupster_wandering/trajectory/: Trajectory.h
hupster_wandering/include/hupster_wandering/trajectory/matcher/: SimpleTrajectoryMatcher.h  TrajectoryMatch.h
hupster_wandering/include/hupster_wandering/trajectory/simulator/: TrajectorySimulator.h
hupster_wandering/include/hupster_wandering/trajectory/simulator/models/: AckermannModel.h  IMotionModel.h  SkidSteerModel.h
hupster_wandering/launch/: wandering.launch
hupster_wandering/launch/params/: costmap.yaml
hupster_wandering/src/: CostMap.cpp  LaserScanDataSource.cpp  SimpleTrajectoryMatcher.cpp  Trajectory.cpp  TrajectoryMatch.cpp  TrajectorySimulator.cpp  Wandering.cpp  hupster_wandering_node.cpp
simulation_ws/src/hamster_simulation/src/hamster_simulation/hamster_teleop/: CMakeLists.txt
simulation_ws/src/hamster_simulation/src/hamster_simulation/hamster_teleop/src/: joystick_teleop_node.cpp
simulation_ws/src/hamster_simulation/src/hamster_simulation/hamster_vehicle/: CMakeLists.txt  package.xml
simulation_ws/src/hamster_simulation/src/hamster_simulation/hamster_vehicle_description/: package.xml
simulation_ws/src/hamster_simulation/src/hamster_simulation/hamster_vehicle_description/launch/: hamster_agent.launch
simulation_ws/src/hamster_simulation/src/hamster_simulation/hamster_vehicle_description/meshes/: wheel.dae
simulation_ws/src/hamster_simulation/src/hamster_simulation/hamster_vehicle_description/urdf/: hamster.urdf.xacro  lynx.urdf.xacro
simulation_ws/src/hamster_simulation/src/hamster_simulation/hamster_vehicle_gazebo/: CMakeLists.txt  package.xml
simulation_ws/src/hamster_simulation/src/hamster_simulation/hamster_vehicle_gazebo/config/: hamster_ackermann_ctrlr_params.yaml  hamster_joint_ctrlr_params.yaml
simulation_ws/src/hamster_simulation/src/hamster_simulation/hamster_vehicle_gazebo/launch/: hamster_multi_vehicle.launch  hamster_vehicle.launch  hamster_vehicle_spawner.launch  hamster_world.launch
simulation_ws/src/hamster_simulation/src/hamster_simulation/hamster_vehicle_gazebo/worlds/room_/: model.config  model.sdf
