<?xml version="1.0"?>
<package>
  <name>hamster_teleop</name>
  <version>0.0.0</version>
  <description>The hamster_teleop package</description>
  <maintainer email="ofir@todo.todo">ofir</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>

  <export>

  </export>
</package>