CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
PROJECT(hamster_vehicle_description)
FIND_PACKAGE(catkin REQUIRED)
CATKIN_PACKAGE()

INSTALL(DIRECTORY launch/
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch/
)

INSTALL(DIRECTORY meshes/
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/meshes/
)

INSTALL(DIRECTORY urdf/
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/urdf/
)