CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
PROJECT(hamster_vehicle_gazebo)
FIND_PACKAGE(catkin REQUIRED)
CATKIN_PACKAGE()

INSTALL(DIRECTORY config/
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/config/
)

INSTALL(DIRECTORY launch/
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch/
)

INSTALL(DIRECTORY models/
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/models/
)

INSTALL(DIRECTORY nodes/
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/nodes/
)

INSTALL(DIRECTORY worlds/
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/worlds/
)