CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
PROJECT(hamster_vehicle_gazebo)
FIND_PACKAGE(catkin REQUIRED)
CATKIN_PACKAGE()

CATKIN_INSTALL_PYTHON(PROGRAMS nodes/ackermann_controller.py
					  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})

INSTALL(DIRECTORY launch/
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch/
)

INSTALL(DIRECTORY models/
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/models/
)

INSTALL(DIRECTORY worlds/
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/worlds/
)