<?xml version="1.0"?>
<package>
  <name>hupster_wandering</name>
  <version>1.0.0</version>
  <description>Simple wandering algorithm</description>
  <maintainer email="blackpc.me@gmail.com">Igor Makhtes</maintainer>
  <author email="blackpc.me@gmail.com">Igor Makhtes</author>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cv_bridge</run_depend>
</package>