<?xml version="1.0"?>
<package>
  <name>hamster_vehicle</name>
  <version>0.0.0</version>
  <description>The hamster_vehicle package</description>
  <maintainer email="ofir@todo.todo">ofir</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>hamster_vehicle_description</run_depend>
  <run_depend>hamster_vehicle_gazebo</run_depend>

  <export>
    
  </export>
</package>
