<?xml version="1.0"?>
<package>
  <name>hamster_vehicle_gazebo</name>
  <version>0.0.0</version>
  <description>The hamster_vehicle_gazebo package</description>
  <maintainer email="ofir@todo.todo">ofir</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- <run_depend>ackermann_msgs</run_depend>
  <run_depend>hamster_vehicle_description</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>xacro</run_depend> -->

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>
  <run_depend>ackermann_msgs</run_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>diff_drive_controller</build_depend>
  <build_depend>ros_controllers</build_depend>
  <build_depend>teleop_twist_keyboard</build_depend>
  <build_depend>ackermann_msgs</build_depend>

 <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>